--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -6,21 +6,10 @@
 ** Base structure
 */
 
-
-
-.wrap
-{
-    background-color: rgb(255, 255, 255) !important;
-    padding: 1%;
-    font-family: 'Roboto', sans-serif;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    display: flex;
-    flex-direction: column;
-    max-width: 1200px;
-    width: 100%;
-
+ul .nav .nav-tabs > a {
+  border-bottom: 1px solid rgb(248, 86, 86);
 }
-
+ 
 .ui-toggle
 {
     display: flex;
